Add title, region, and save type to ROM header

--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -40,4 +40,5 @@ n64_rom(
     name = "Thornmarked",
     data = "//assets:assets_files",
     program = ":Thornmarked.elf",
+    title = "Thornmarked",
 )
