--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,6 +2,8 @@ filegroup(
     name = "rom_images",
     srcs = [
         "//experimental/audio",
+        "//experimental/tvtype:tvtype_ntsc",
+        "//experimental/tvtype:tvtype_pal",
         "//game",
     ],
 )
