--- a/tools/textureconvert/BUILD.bazel
+++ b/tools/textureconvert/BUILD.bazel
@@ -7,6 +7,7 @@ go_binary(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        "//tools/getpath",
         "//tools/texture",
     ],
 )
