--- a/tools/makepak/BUILD.bazel
+++ b/tools/makepak/BUILD.bazel
@@ -3,7 +3,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 go_binary(
     name = "makepak",
     srcs = [
+        "codegen.go",
+        "datagen.go",
         "makepak.go",
+        "types.go",
     ],
     visibility = ["//visibility:public"],
     deps = [
