Make fairy model show up better
- Use light-colored background
- Move camera closer

--- a/assets/images/BUILD.bazel
+++ b/assets/images/BUILD.bazel
@@ -7,6 +7,7 @@ textures(
     srcs = [
         "Ariella.png",
         "Ground023.png",
+        "Marble012.png",
     ],
     format = "rgba.16",
     mipmap = True,
