Make common framework for simple test programs

--- a/experimental/tvtype/BUILD.bazel
+++ b/experimental/tvtype/BUILD.bazel
@@ -6,15 +6,12 @@ cc_binary(
     name = "tvtype.elf",
     srcs = [
         "main.c",
-        "stack.s",
     ],
     copts = COPTS,
     deps = [
         "//base",
         "//base/pak",
-        "//n64:libultra",
-        "//sdk:gspF3DEX2.xbus",
-        "//sdk:rspboot",
+        "//experimental/simple",
     ],
 )
 
