--- a/tools/modelconvert/BUILD.bazel
+++ b/tools/modelconvert/BUILD.bazel
@@ -14,6 +14,8 @@ cc_binary(
         "mesh_emit.cpp",
         "mesh_import.cpp",
         "modelconvert.cpp",
+        "vertex.cpp",
+        "vertex.hpp",
     ],
     copts = CXXOPTS,
     visibility = ["//visibility:public"],
