Refoactor: extract batch and config

--- a/tools/modelconvert/BUILD.bazel
+++ b/tools/modelconvert/BUILD.bazel
@@ -6,11 +6,13 @@ cc_binary(
     srcs = [
         "axes.cpp",
         "axes.hpp",
+        "batch.cpp",
+        "batch.hpp",
+        "config.hpp",
         "gbi.cpp",
         "gbi.hpp",
         "mesh.cpp",
         "mesh.hpp",
-        "mesh_batch.cpp",
         "mesh_emit.cpp",
         "mesh_import.cpp",
         "modelconvert.cpp",
