Major refactor of modelconvert
It is a little broken now, but it should be easier to extend.

--- a/tools/modelconvert/BUILD.bazel
+++ b/tools/modelconvert/BUILD.bazel
@@ -6,18 +6,19 @@ cc_binary(
     srcs = [
         "axes.cpp",
         "axes.hpp",
-        "batch.cpp",
-        "batch.hpp",
+        "compile.cpp",
+        "compile.hpp",
         "config.hpp",
+        "displaylist.cpp",
+        "displaylist.hpp",
         "gbi.cpp",
         "gbi.hpp",
         "mesh.cpp",
         "mesh.hpp",
-        "mesh_emit.cpp",
-        "mesh_import.cpp",
         "modelconvert.cpp",
-        "vertex.cpp",
         "vertex.hpp",
+        "vertexcache.cpp",
+        "vertexcache.hpp",
     ],
     copts = CXXOPTS,
     visibility = ["//visibility:public"],
