--- a/tools/util/BUILD.bazel
+++ b/tools/util/BUILD.bazel
@@ -41,6 +41,14 @@ cc_library(
 )
 
 cc_library(
+    name = "pack",
+    hdrs = [
+        "pack.hpp",
+    ],
+    visibility = ["//tools:__subpackages__"],
+)
+
+cc_library(
     name = "expr",
     srcs = [
         "expr.cpp",
