Use matrix to transform vertex coordinates

--- a/tools/modelconvert/BUILD.bazel
+++ b/tools/modelconvert/BUILD.bazel
@@ -4,6 +4,7 @@ load("//base:copts.bzl", "CXXOPTS")
 cc_binary(
     name = "modelconvert",
     srcs = [
+        "assimp.cpp",
         "axes.cpp",
         "axes.hpp",
         "compile.cpp",
