Apply transformations to imported model

--- a/assets/models/BUILD.bazel
+++ b/assets/models/BUILD.bazel
@@ -27,8 +27,8 @@ models(
     name = "fairy2",
     srcs = ["fairy2.fbx"],
     animate = True,
-    axes = "-y,x,z",
-    scale = "meter*2/5",
+    axes = "z,x,y",
+    scale = "meter*2/500",
     texcoords = True,
     vertex_colors = True,
 )
