Extract model format to Model class

--- a/tools/modelconvert/BUILD.bazel
+++ b/tools/modelconvert/BUILD.bazel
@@ -16,6 +16,8 @@ cc_binary(
         "gbi.hpp",
         "mesh.cpp",
         "mesh.hpp",
+        "model.cpp",
+        "model.hpp",
         "modelconvert.cpp",
         "vertex.hpp",
         "vertexcache.cpp",
