--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -28,6 +28,8 @@ cc_binary(
         "physics.h",
         "stack.s",
         "text.c",
+        "texture_n64.c",
+        "texture_n64.h",
         "texture_n64_dl.c",
         "texture_n64_dl.h",
         "walk.c",
