--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -24,14 +24,14 @@ cc_binary(
         "main.c",
         "model.c",
         "model.h",
+        "n64/texture.c",
+        "n64/texture.h",
+        "n64/texture_dl.c",
+        "n64/texture_dl.h",
         "physics.c",
         "physics.h",
         "stack.s",
         "text.c",
-        "texture_n64.c",
-        "texture_n64.h",
-        "texture_n64_dl.c",
-        "texture_n64_dl.h",
         "walk.c",
         "walk.h",
     ],
