--- a/base/pak/BUILD.bazel
+++ b/base/pak/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
+load("@rules_cc//cc:defs.bzl", "cc_library")
 load("//base:copts.bzl", "COPTS")
 
 cc_library(
@@ -8,6 +8,7 @@ cc_library(
     ],
     hdrs = [
         "pak.h",
+        "types.h",
     ],
     copts = COPTS,
     visibility = ["//visibility:public"],
