Use hash table to track loaded animation frames

--- a/base/BUILD.bazel
+++ b/base/BUILD.bazel
@@ -30,6 +30,7 @@ cc_library(
         "console_internal.h",
         "fatal.c",
         "float.c",
+        "hash.c",
         "mat4.c",
         "quat.c",
         "vec2.c",
@@ -51,6 +52,7 @@ cc_library(
         "base.h",
         "console.h",
         "float.h",
+        "hash.h",
         "mat4.h",
         "quat.h",
         "vec2.h",
