--- a/base/testlib/BUILD.bazel
+++ b/base/testlib/BUILD.bazel
@@ -17,7 +17,10 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//base",
-    ],
+    ] + select({
+        "//n64:os": ["//base:base_n64"],
+        "//conditions:default": ["//base:base_pc"],
+    }),
 )
 
 cc_test(
