Create //base/n64 package

--- a/base/pak/BUILD.bazel
+++ b/base/pak/BUILD.bazel
@@ -13,6 +13,6 @@ cc_library(
     copts = COPTS,
     visibility = ["//visibility:public"],
     deps = [
-        "//base:base_n64",
+        "//base/n64",
     ],
 )
