--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -42,7 +42,7 @@ cc_binary(
         "//assets",
         "//base",
         "//base:random",
-        "//base:scheduler",
+        "//base/n64:scheduler",
         "//base/pak",
         "//sdk:gspF3DEX2.xbus",
         "//sdk:rspboot",
