--- a/experimental/simple/BUILD.bazel
+++ b/experimental/simple/BUILD.bazel
@@ -20,7 +20,7 @@ cc_library(
     ],
     visibility = ["//experimental:__subpackages__"],
     deps = [
-        "//base:base_n64",
+        "//base/n64",
         "//sdk:gspF3DEX2.xbus",
         "//sdk:rspboot",
     ],
