Move N64 code into n64 directory

--- a/game/BUILD.bazel
+++ b/game/BUILD.bazel
@@ -39,22 +39,22 @@ cc_library(
 cc_binary(
     name = "Thornmarked.elf",
     srcs = [
-        "defs.h",
-        "graphics.c",
-        "graphics.h",
-        "main.c",
         "n64/camera.c",
         "n64/camera.h",
+        "n64/defs.h",
         "n64/game.c",
         "n64/game.h",
+        "n64/graphics.c",
+        "n64/graphics.h",
+        "n64/main.c",
         "n64/model.c",
         "n64/model.h",
+        "n64/stack.s",
+        "n64/text.c",
         "n64/texture.c",
         "n64/texture.h",
         "n64/texture_dl.c",
         "n64/texture_dl.h",
-        "stack.s",
-        "text.c",
     ],
     copts = COPTS,
     deps = [
