Create package for game N64 code

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -4,7 +4,7 @@ filegroup(
         "//experimental/audio",
         "//experimental/tvtype:tvtype_ntsc",
         "//experimental/tvtype:tvtype_pal",
-        "//game",
+        "//game/n64",
     ],
 )
 
