Use packed array for model system

--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -12,6 +12,7 @@ cc_library(
         "walk.c",
     ],
     hdrs = [
+        "entity.h",
         "camera.h",
         "game.h",
         "model.h",
