Make game random number generator state global

--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -9,14 +9,16 @@ cc_library(
         "input.h",
         "model.c",
         "physics.c",
+        "random.c",
         "walk.c",
     ],
     hdrs = [
-        "entity.h",
         "camera.h",
+        "entity.h",
         "game.h",
         "model.h",
         "physics.h",
+        "random.h",
         "walk.h",
     ],
     copts = COPTS,
