Add monster behavior component
Monsters move randomly.

--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -8,6 +8,7 @@ cc_library(
         "game.c",
         "input.h",
         "model.c",
+        "monster.c",
         "physics.c",
         "random.c",
         "walk.c",
@@ -17,6 +18,7 @@ cc_library(
         "entity.h",
         "game.h",
         "model.h",
+        "monster.h",
         "physics.h",
         "random.h",
         "walk.h",
