--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,3 +1,5 @@
+load("@bazel_gazelle//:def.bzl", "gazelle")
+
 filegroup(
     name = "rom_images",
     srcs = [
@@ -14,3 +16,5 @@ test_suite(
         "//base:console_test",
     ],
 )
+
+gazelle(name = "gazelle")
