Move graphics task out of main.c
This is in preparation to add an audio task.

--- a/game/n64/BUILD.bazel
+++ b/game/n64/BUILD.bazel
@@ -25,6 +25,8 @@ cc_binary(
         "model.c",
         "model.h",
         "stack.s",
+        "task.c",
+        "task.h",
         "text.c",
         "text.h",
         "texture.c",
