--- a/assets/music/BUILD.bazel
+++ b/assets/music/BUILD.bazel
@@ -8,6 +8,7 @@ audio_tracks(
         "03_Progression.flac",
         "04_Under_the_Moon.flac",
         "05_Descent_Into_Madness.flac",
+        "08_Rising_Tide_Redux.flac",
     ],
     rate = "32000",
     visibility = ["//visibility:public"],
