--- a/assets/music/BUILD.bazel
+++ b/assets/music/BUILD.bazel
@@ -9,6 +9,7 @@ audio_tracks(
         "04_Under_the_Moon.flac",
         "05_Descent_Into_Madness.flac",
         "08_Rising_Tide_Redux.flac",
+        "08_Rising_Tide_Redux.json",
     ],
     rate = "32000",
     visibility = ["//visibility:public"],
