Refactor system-specific game code

--- a/game/n64/BUILD.bazel
+++ b/game/n64/BUILD.bazel
@@ -19,14 +19,14 @@ cc_binary(
         "camera.c",
         "camera.h",
         "defs.h",
-        "game.c",
-        "game.h",
         "graphics.c",
         "graphics.h",
         "main.c",
         "model.c",
         "model.h",
         "stack.s",
+        "system.c",
+        "system.h",
         "task.c",
         "task.h",
         "text.c",
