Add support for second player

--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -9,6 +9,7 @@ cc_library(
         "model.c",
         "monster.c",
         "physics.c",
+        "player.c",
         "random.c",
         "walk.c",
     ],
@@ -20,6 +21,7 @@ cc_library(
         "model.h",
         "monster.h",
         "physics.h",
+        "player.h",
         "random.h",
         "time.h",
         "walk.h",
