--- a/tools/textureconvert/BUILD.bazel
+++ b/tools/textureconvert/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary")
 go_binary(
     name = "textureconvert",
     srcs = [
+        "strips.go",
         "textureconvert.go",
     ],
     visibility = ["//visibility:public"],
