Draw images on screen
The image has glitches, probably due to a lack of row padding.

--- a/game/n64/BUILD.bazel
+++ b/game/n64/BUILD.bazel
@@ -21,6 +21,8 @@ cc_binary(
         "defs.h",
         "graphics.c",
         "graphics.h",
+        "image.c",
+        "image.h",
         "input.c",
         "input.h",
         "main.c",
