Create material system

--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -18,6 +18,7 @@ cc_library(
         "entity.h",
         "game.h",
         "input.h",
+        "material.h",
         "model.h",
         "monster.h",
         "physics.h",
