--- a/game/n64/BUILD.bazel
+++ b/game/n64/BUILD.bazel
@@ -26,6 +26,8 @@ cc_binary(
         "input.c",
         "input.h",
         "main.c",
+        "material.c",
+        "material.h",
         "model.c",
         "model.h",
         "stack.s",
@@ -35,8 +37,6 @@ cc_binary(
         "task.h",
         "text.c",
         "text.h",
-        "texture.c",
-        "texture.h",
         "texture_dl.c",
         "texture_dl.h",
         "time.c",
