Extract texture loading back from material code

--- a/game/n64/BUILD.bazel
+++ b/game/n64/BUILD.bazel
@@ -37,6 +37,8 @@ cc_binary(
         "task.h",
         "text.c",
         "text.h",
+        "texture.c",
+        "texture.h",
         "texture_dl.c",
         "texture_dl.h",
         "time.c",
