--- a/game/core/BUILD.bazel
+++ b/game/core/BUILD.bazel
@@ -8,6 +8,7 @@ cc_library(
         "game.c",
         "model.c",
         "monster.c",
+        "particle.c",
         "physics.c",
         "player.c",
         "random.c",
@@ -21,6 +22,7 @@ cc_library(
         "material.h",
         "model.h",
         "monster.h",
+        "particle.h",
         "physics.h",
         "player.h",
         "random.h",
